feat - finalizada a configuração do banco de dados

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,3 +39,5 @@ services:
             POSTGRES_PASSWORD: admin
         volumes:
             - ./init.sql:/docker-entrypoint-initdb.d/init.sql
+        ports:
+            - "5432:5432"
