--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
             /bin/sh -c "
                 cd /root;
                 npm install;
-                npm start
+                npm start;
             "
         volumes:
             - "./bipe-web/:/root/"
@@ -26,7 +26,7 @@ services:
             /bin/sh -c "
                 cd /root;
                 npm install;
-                npm start
+                npm start;
             "
         volumes:
             - "./bipe-core-api/:/root/"
