--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,12 @@
 version: "3"
+networks:
+    bipe_network:
+        name: bipe_network
+        driver: bridge
+        ipam:
+            config:
+                - subnet: 10.5.0.0/24
+                  gateway: 10.5.0.1
 services:
     bipe-web:
         image: "node:alpine"
@@ -7,8 +15,6 @@ services:
             - HOST=0.0.0.0
             - PORT=5000
             - CHOKIDAR_USEPOLLING=true
-        ports: 
-            - "5000:5000"
         command: >
             /bin/sh -c "
                 cd /root;
@@ -17,11 +23,14 @@ services:
             "
         volumes:
             - "./bipe-web/:/root/"
+        networks:
+            bipe_network:
+                ipv4_address: 10.5.0.4
+        ports:
+            - 5000:5000
     bipe-core-api:
         image: "node:alpine"
         container_name: "bipe-core-api"
-        ports: 
-            - "3000:3000"
         command: >
             /bin/sh -c "
                 cd /root;
@@ -30,6 +39,11 @@ services:
             "
         volumes:
             - "./bipe-core-api/:/root/"
+        networks:
+            bipe_network:
+                ipv4_address: 10.5.0.3
+        ports:
+            - 3000:3000
     db:
         image: postgres
         restart: always
@@ -39,5 +53,8 @@ services:
             POSTGRES_PASSWORD: admin
         volumes:
             - ./init.sql:/docker-entrypoint-initdb.d/init.sql
+        networks:
+            bipe_network:
+                ipv4_address: 10.5.0.2
         ports:
             - "5432:5432"
